--- a/Documentation/template_Article.tex
+++ b/Documentation/template_Article.tex
@@ -27,6 +27,8 @@ Things that could be done on Fashion-MNIST
 \end{abstract}
 
 \section{Idea collection and planning}
+Loss functions used is categorical cross entropy. Why not Mean squared or something else
+
 \textbf{Hyperparameters:}\\
 Idea: For every test, do several choices of hyperparameters to get a feel for the choices\\
 \\
