initializastion section finished

--- a/Documentation/template_Article.tex
+++ b/Documentation/template_Article.tex
@@ -66,7 +66,16 @@ This section will describe the first set of investigative experiments. Mainly re
 As a starting point the network structure from Exercise 4 of sheet 6 was chosen to allow further investigation. As described in section \ref{ideas} Adam was be used as the optimizer throughout this section in order to reduce complexity.
 
 \subsection{Initialization experiments}
-The first 
+The methods for initializations are to be tested in this section:
+\begin{itemize}
+	\item zero
+	\item known data
+	\item random
+\end{itemize}
+As mentioned before the net structure used for this will be structure from Exercise 4 of sheet 6.\\
+The random initialization will be employed before the known data approach as the results from the random initialization will be used as the known data.
+\subsubsection{Zero initialization}
+
 
 \subsection{Network structure}
 \subsection{Hyperparameters}
