--- a/Documentation/template_Article.tex
+++ b/Documentation/template_Article.tex
@@ -149,7 +149,8 @@ The hyperparameters for the fixed network structure of the baseline network with
 	\end{tabular}
 \end{centering}
 
-
+Different training times\\
+Curve appearance/saturation
 
 \subsection{Network structure}
 
