--- a/Documentation/template_Article.tex
+++ b/Documentation/template_Article.tex
@@ -225,9 +225,18 @@ For the baseline net the observed improvement was minimal, but for the deeper ne
 \subsection{Dropout}
 Localized features, more specialized filters
 
+\begin{Figure}
+	\label{fig:dropout}
+	\centering
+	\includegraphics[width=\linewidth]{../img_1_5_regularization/dropout}
+	\captionof{figure}{}
+\end{Figure}
+
 \section{Putting it all together}
 
 \section{Attribution}
+Switching back to Fashion-MNIST\\
+
 
 Check for generality and attribute in the same step by using an image from the test set and an image that was taken by me\\
 \\
