--- a/Documentation/template_Article.tex
+++ b/Documentation/template_Article.tex
@@ -244,5 +244,11 @@ Using gradient tape -> saliency map\\
 Global average pooling -> class activation map\\
 Grad-CAM! am ehesten
 
+\section{Adversarial attacks}
+
+\section{Autoencoders}
+
+\section{Generating new fashionable clothing}
+
 \end{multicols}
 \end{document}
